--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,4 +85,14 @@
         app:layout_constraintStart_toStartOf="@+id/searchBtn"
         app:layout_constraintTop_toBottomOf="@+id/searchBtn" />
 
+    <Button
+        android:id="@+id/slotsBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="See Slots"
+        app:layout_constraintEnd_toEndOf="@+id/stopBtn"
+        app:layout_constraintStart_toStartOf="@+id/stopBtn"
+        app:layout_constraintTop_toBottomOf="@+id/stopBtn" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
